chore: tailwindcss theme + goreleaser basic recipe

--- a/modd.conf
+++ b/modd.conf
@@ -1,12 +1,16 @@
 **/*.go
-misc/pipeline/dist/*.js
-misc/schemas/*.json
 **/testdata/**/*
-internal/server/template/blocks/*.tmpl
-internal/server/template/layouts/*.tmpl
+internal/server/template/**/*.tmpl
+internal/server/assets/dist/*.css
 modd.conf
 .env {
     prep: make build-frmd
     prep: [ -e .env ] || ( cp .env.dist .env )
     prep: make test
+}
+
+internal/server/assets/src/**/*.css
+internal/server/template/**/*.tmpl
+{
+    prep: make tailwind
 }
