chore: disable install script tests in watch mode

--- a/modd.conf
+++ b/modd.conf
@@ -6,7 +6,7 @@ modd.conf
 .env {
     prep: make build-frmd
     prep: [ -e .env ] || ( cp .env.dist .env )
-    prep: make test
+    prep: make RUN_INSTALL_TESTS=no test
 }
 
 internal/server/assets/src/**/*.css
